# GcRay

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  generate.sh  test.pov
example/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
example/falanguanban3/: falanguanban3_POV_geom.inc  falanguanban3_POV_main.ini  falanguanban3_POV_mat.inc
src/: CMakeLists.txt  Makefile  cmake_install.cmake  pov_model.cpp  pov_object.cpp  pov_parser.cpp
src/inc/: pov_base.h  pov_object.h  pov_parser.h
src/inc/pov/: pov_background.h  pov_base.h  pov_box.h  pov_camera.h  pov_lightsource.h  pov_model.h  pov_object.h  pov_parser.h  pov_sphere.h
src/pov/: CMakeLists.txt  Makefile  pov_background.cpp  pov_box.cpp  pov_camera.cpp  pov_lightsource.cpp  pov_model.cpp  pov_object.cpp  pov_parser.cpp  pov_sphere.cpp
